tests/resources/tf/bug78_emptyListAttribute.tf
resource "aws_security_group" "aws_security_group_1" {
    vpc_id = []
}

resource "aws_vpc" "aws_vpc_1" {
}
