tests/resources/tf/id_reference.tf
resource "aws_vpc" "vpc" {
}

resource "aws_subnet" "subnet" {
    vpc_id = aws_vpc.vpc
}
